package com.client.model;

import com.baomidou.mybatisplus.annotation.IdType;
import com.baomidou.mybatisplus.annotation.TableField;
import com.baomidou.mybatisplus.annotation.TableId;
import com.baomidou.mybatisplus.annotation.TableName;
import io.swagger.annotations.ApiModel;
import io.swagger.annotations.ApiModelProperty;
import lombok.Getter;
import lombok.Setter;

import java.io.Serializable;

/**
 * @author MaybeBin
 * @since 2022-04-21
 */
@Getter
@Setter
@TableName("Role")
@ApiModel(value = "Role对象", description = "")
public class Role implements Serializable {

  private static final long serialVersionUID = 1L;

  @TableId(value = "id", type = IdType.AUTO)
  private Integer id;

  @ApiModelProperty("权限名称")
  @TableField("rolename")
  private String rolename;

  @ApiModelProperty("权限菜单")
  @TableField("menu")
  private String menu;
}
